coursework2_2016/jvmLang.output
State 17 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: "program" T_id $@1 stmts "end_program"

    3 stmts: stmt
    4      | stmt stmts

    5 stmt: asmt
    6     | printcmd

    7 printcmd: '(' "print" expr ')'

    8 asmt: '(' T_id expr ')'

    9 expr: T_num
   10     | T_real
   11     | T_id
   12     | '(' expr ')'
   13     | expr expr '+'
   14     | expr expr '*'
   15     | T_id T_inc
   16     | T_inc T_id


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 8 12
')' (41) 7 8 12
'*' (42) 14
'+' (43) 13
error (256)
T_num (258) 9
T_real (259) 10
T_id (260) 2 8 11 15 16
T_inc (261) 15 16
"program" (262) 2
"end_program" (263) 2
"print" (264) 7


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
program (15)
    on left: 2, on right: 0
$@1 (16)
    on left: 1, on right: 2
stmts (17)
    on left: 3 4, on right: 2 4
stmt (18)
    on left: 5 6, on right: 3 4
printcmd (19)
    on left: 7, on right: 6
asmt (20)
    on left: 8, on right: 5
expr (21)
    on left: 9 10 11 12 13 14 15 16, on right: 7 8 12 13 14


State 0

    0 $accept: . program $end

    "program"  shift, and go to state 1

    program  go to state 2


State 1

    2 program: "program" . T_id $@1 stmts "end_program"

    T_id  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    2 program: "program" T_id . $@1 stmts "end_program"

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 program: "program" T_id $@1 . stmts "end_program"

    '('  shift, and go to state 6

    stmts     go to state 7
    stmt      go to state 8
    printcmd  go to state 9
    asmt      go to state 10


State 6

    7 printcmd: '(' . "print" expr ')'
    8 asmt: '(' . T_id expr ')'

    T_id     shift, and go to state 11
    "print"  shift, and go to state 12


State 7

    2 program: "program" T_id $@1 stmts . "end_program"

    "end_program"  shift, and go to state 13


State 8

    3 stmts: stmt .
    4      | stmt . stmts

    '('  shift, and go to state 6

    $default  reduce using rule 3 (stmts)

    stmts     go to state 14
    stmt      go to state 8
    printcmd  go to state 9
    asmt      go to state 10


State 9

    6 stmt: printcmd .

    $default  reduce using rule 6 (stmt)


State 10

    5 stmt: asmt .

    $default  reduce using rule 5 (stmt)


State 11

    8 asmt: '(' T_id . expr ')'

    T_num   shift, and go to state 15
    T_real  shift, and go to state 16
    T_id    shift, and go to state 17
    T_inc   shift, and go to state 18
    '('     shift, and go to state 19

    expr  go to state 20


State 12

    7 printcmd: '(' "print" . expr ')'

    T_num   shift, and go to state 15
    T_real  shift, and go to state 16
    T_id    shift, and go to state 17
    T_inc   shift, and go to state 18
    '('     shift, and go to state 19

    expr  go to state 21


State 13

    2 program: "program" T_id $@1 stmts "end_program" .

    $default  reduce using rule 2 (program)


State 14

    4 stmts: stmt stmts .

    $default  reduce using rule 4 (stmts)


State 15

    9 expr: T_num .

    $default  reduce using rule 9 (expr)


State 16

   10 expr: T_real .

    $default  reduce using rule 10 (expr)


State 17

   11 expr: T_id .
   15     | T_id . T_inc

    T_inc  shift, and go to state 22

    T_inc     [reduce using rule 11 (expr)]
    $default  reduce using rule 11 (expr)


State 18

   16 expr: T_inc . T_id

    T_id  shift, and go to state 23


State 19

   12 expr: '(' . expr ')'

    T_num   shift, and go to state 15
    T_real  shift, and go to state 16
    T_id    shift, and go to state 17
    T_inc   shift, and go to state 18
    '('     shift, and go to state 19

    expr  go to state 24


State 20

    8 asmt: '(' T_id expr . ')'
   13 expr: expr . expr '+'
   14     | expr . expr '*'

    T_num   shift, and go to state 15
    T_real  shift, and go to state 16
    T_id    shift, and go to state 17
    T_inc   shift, and go to state 18
    '('     shift, and go to state 19
    ')'     shift, and go to state 25

    expr  go to state 26


State 21

    7 printcmd: '(' "print" expr . ')'
   13 expr: expr . expr '+'
   14     | expr . expr '*'

    T_num   shift, and go to state 15
    T_real  shift, and go to state 16
    T_id    shift, and go to state 17
    T_inc   shift, and go to state 18
    '('     shift, and go to state 19
    ')'     shift, and go to state 27

    expr  go to state 26


State 22

   15 expr: T_id T_inc .

    $default  reduce using rule 15 (expr)


State 23

   16 expr: T_inc T_id .

    $default  reduce using rule 16 (expr)


State 24

   12 expr: '(' expr . ')'
   13     | expr . expr '+'
   14     | expr . expr '*'

    T_num   shift, and go to state 15
    T_real  shift, and go to state 16
    T_id    shift, and go to state 17
    T_inc   shift, and go to state 18
    '('     shift, and go to state 19
    ')'     shift, and go to state 28

    expr  go to state 26


State 25

    8 asmt: '(' T_id expr ')' .

    $default  reduce using rule 8 (asmt)


State 26

   13 expr: expr . expr '+'
   13     | expr expr . '+'
   14     | expr . expr '*'
   14     | expr expr . '*'

    T_num   shift, and go to state 15
    T_real  shift, and go to state 16
    T_id    shift, and go to state 17
    T_inc   shift, and go to state 18
    '('     shift, and go to state 19
    '+'     shift, and go to state 29
    '*'     shift, and go to state 30

    expr  go to state 26


State 27

    7 printcmd: '(' "print" expr ')' .

    $default  reduce using rule 7 (printcmd)


State 28

   12 expr: '(' expr ')' .

    $default  reduce using rule 12 (expr)


State 29

   13 expr: expr expr '+' .

    $default  reduce using rule 13 (expr)


State 30

   14 expr: expr expr '*' .

    $default  reduce using rule 14 (expr)
